{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 122,
  "lineage": "29c3947a-50c2-a0b9-77c6-e5a2b3976f9a",
  "resources": [
    {
      "module": "module.dev-eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:security-group/sg-013909ec2e3a557e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster API Server to communicate with the worker nodes",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-013909ec2e3a557e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow worker nodes to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20230213033345172900000007",
            "name_prefix": "terraform-",
            "owner_id": "475775181858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow worker nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1916040631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013909ec2e3a557e9",
            "security_group_rule_id": "sgr-0fc83d6d4730300d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-eks.aws_security_group.eks_cluster",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev-eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster API Server to communicate with the worker nodes",
            "from_port": 1024,
            "id": "sgrule-2336046658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-013909ec2e3a557e9",
            "security_group_rule_id": "sgr-0bb5a35e2cb9dd3ca",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev-eks.aws_security_group.eks_cluster",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BASTION",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01fd3a0774e3b3ebe",
            "arn": "arn:aws:ec2:eu-central-1:475775181858:instance/i-08e42bedf94db617d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08e42bedf94db617d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8b38fe8161f8502",
            "private_dns": "ip-10-5-1-10.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.5.1.10",
            "public_dns": "ec2-3-75-197-198.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.197.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-056ebf9e6c7ac784b",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a422425b83a8b9f0",
            "tags": {
              "environment": "dev"
            },
            "tags_all": {
              "environment": "dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01cd9c12f870f08af"
            ]
          },
          "dependencies": [
            "module.instance.aws_security_group.only_ssh_bositon",
            "module.instance.data.aws_ami.ubuntu",
            "module.vpc_dev.aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "only_ssh_bositon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:security-group/sg-01cd9c12f870f08af",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01cd9c12f870f08af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-2023021303335647160000000b",
            "name_prefix": "terraform-",
            "owner_id": "475775181858",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "fornat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024b513301e093eea",
            "association_id": "eipassoc-0815b07cb4ace6ae1",
            "domain": "vpc",
            "id": "eipalloc-024b513301e093eea",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09b8929d215617252",
            "private_dns": "ip-10-5-1-43.eu-central-1.compute.internal",
            "private_ip": "10.5.1.43",
            "public_dns": "ec2-3-74-115-231.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.115.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev"
            },
            "tags_all": {
              "environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f783b4e7fed8afb",
            "association_id": "eipassoc-0288110fdc4404180",
            "domain": "vpc",
            "id": "eipalloc-03f783b4e7fed8afb",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-09a51c89f6491b283",
            "private_dns": "ip-10-5-2-206.eu-central-1.compute.internal",
            "private_ip": "10.5.2.206",
            "public_dns": "ec2-3-71-225-192.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.225.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev"
            },
            "tags_all": {
              "environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01de33630f0354bb5",
            "association_id": "eipassoc-05bb6891981ed28c4",
            "domain": "vpc",
            "id": "eipalloc-01de33630f0354bb5",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-074f72cde5d8f2927",
            "private_dns": "ip-10-5-1-47.eu-central-1.compute.internal",
            "private_ip": "10.5.1.47",
            "public_dns": "ec2-3-74-146-78.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.74.146.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev"
            },
            "tags_all": {
              "environment": "dev"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:internet-gateway/igw-0c323875003c4b3ff",
            "id": "igw-0c323875003c4b3ff",
            "owner_id": "475775181858",
            "tags": {
              "environment": "dev"
            },
            "tags_all": {
              "environment": "dev"
            },
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "forprivatesubnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024b513301e093eea",
            "connectivity_type": "public",
            "id": "nat-07f7a9559fe2faa55",
            "network_interface_id": "eni-09b8929d215617252",
            "private_ip": "10.5.1.43",
            "public_ip": "3.74.115.231",
            "subnet_id": "subnet-0a422425b83a8b9f0"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.fornat",
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f783b4e7fed8afb",
            "connectivity_type": "public",
            "id": "nat-0f9b609d6d942ad1b",
            "network_interface_id": "eni-09a51c89f6491b283",
            "private_ip": "10.5.2.206",
            "public_ip": "3.71.225.192",
            "subnet_id": "subnet-09322ea8aaf867bc5"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.fornat",
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01de33630f0354bb5",
            "connectivity_type": "public",
            "id": "nat-08e78adc03b3c4fd8",
            "network_interface_id": "eni-074f72cde5d8f2927",
            "private_ip": "10.5.1.47",
            "public_ip": "3.74.146.78",
            "subnet_id": "subnet-0a422425b83a8b9f0"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.fornat",
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:route-table/rtb-0038f7a93cdd652bb",
            "id": "rtb-0038f7a93cdd652bb",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07f7a9559fe2faa55",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-1",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet-1",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_nat_gateway.forprivatesubnets",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:route-table/rtb-0f11d865ab676ded1",
            "id": "rtb-0f11d865ab676ded1",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f9b609d6d942ad1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-2",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet-2",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_nat_gateway.forprivatesubnets",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:route-table/rtb-047d073b5a299af89",
            "id": "rtb-047d073b5a299af89",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08e78adc03b3c4fd8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-private-subnet-3",
              "environment": "dev"
            },
            "tags_all": {
              "Name": "dev-route-private-subnet-3",
              "environment": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_nat_gateway.forprivatesubnets",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:route-table/rtb-0d5dc4177149997e7",
            "id": "rtb-0d5dc4177149997e7",
            "owner_id": "475775181858",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c323875003c4b3ff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0f7edc93555122d",
            "route_table_id": "rtb-0d5dc4177149997e7",
            "subnet_id": "subnet-0a422425b83a8b9f0"
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_route_table.rt",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e676fc818bc694d0",
            "route_table_id": "rtb-0d5dc4177149997e7",
            "subnet_id": "subnet-09322ea8aaf867bc5"
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_route_table.rt",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d3ead586805450a",
            "route_table_id": "rtb-0038f7a93cdd652bb",
            "subnet_id": "subnet-09f3aaacbf786780d"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.fornat",
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_nat_gateway.forprivatesubnets",
            "module.vpc_dev.aws_route_table.private_subnets",
            "module.vpc_dev.aws_subnet.private-subnets",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e01715358da6dc2b",
            "route_table_id": "rtb-0f11d865ab676ded1",
            "subnet_id": "subnet-08ada862ab6b18486"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.fornat",
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_nat_gateway.forprivatesubnets",
            "module.vpc_dev.aws_route_table.private_subnets",
            "module.vpc_dev.aws_subnet.private-subnets",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-053c96bad572dc789",
            "route_table_id": "rtb-047d073b5a299af89",
            "subnet_id": "subnet-032f071ba522b62cc"
          },
          "dependencies": [
            "module.vpc_dev.aws_eip.fornat",
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_nat_gateway.forprivatesubnets",
            "module.vpc_dev.aws_route_table.private_subnets",
            "module.vpc_dev.aws_subnet.private-subnets",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:subnet/subnet-09f3aaacbf786780d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.5.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f3aaacbf786780d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:subnet/subnet-08ada862ab6b18486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.5.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ada862ab6b18486",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:subnet/subnet-032f071ba522b62cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.5.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032f071ba522b62cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:subnet/subnet-0a422425b83a8b9f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.5.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a422425b83a8b9f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:subnet/subnet-09322ea8aaf867bc5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.5.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09322ea8aaf867bc5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "475775181858",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "tags_all": {
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "name": "Provides an VPC subnet resource.[count.index]"
            },
            "vpc_id": "vpc-0e902089fe7677abc"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475775181858:vpc/vpc-0e902089fe7677abc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.5.0.0/16",
            "default_network_acl_id": "acl-03751bb2a2e76da41",
            "default_route_table_id": "rtb-0b2d69cd651a3d7e9",
            "default_security_group_id": "sg-07227dfaa52728e69",
            "dhcp_options_id": "dopt-012de561ff032ee59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e902089fe7677abc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2d69cd651a3d7e9",
            "owner_id": "475775181858",
            "tags": {
              "environment": "dev",
              "name": "vpc-"
            },
            "tags_all": {
              "environment": "dev",
              "name": "vpc-"
            }
          }
        }
      ]
    }
  ]
}